Stop error dialog spilling into navbar
Makes the settings button annoying to click

--- a/renderer/error-dialog/error-dialog.less
+++ b/renderer/error-dialog/error-dialog.less
@@ -5,6 +5,8 @@
     padding: 20px;
     bottom: 20px;
     right: 20px;
+    // full width - navbar - right offset - padding - left offset
+    max-width: calc(100% - @navbar-width - 20px - 40px - 20px);
     background-color: fade(@red, 80%);
     backdrop-filter: blur(2px);
     cursor: pointer;
